# attendance_agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: config.example.yaml
scripts/: install_task.py
src/: browser.py  config_loader.py  main.py  meeting_joiner.py  notifier.py  scheduler.py  selectors.py  teams_navigator.py  utils.py
